buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }		
        maven {
            url = 'https://repo.spongepowered.org/repository/maven-public/'
            content { includeGroup "org.spongepowered" }
        }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

apply plugin: 'org.spongepowered.mixin'

version = '0.6.0'
group = 'daripher.skilltree'
archivesBaseName = 'PassiveSkillTree-1.19.2-BETA'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

mixin {
    add sourceSets.main, "skilltree.refmap.json"
    config "skilltree.mixins.json"
}

minecraft {
    mappings channel: 'parchment', version: '2022.11.27-1.19.2'

    runs {
        client {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'skilltree'

            mods {
                skilltree {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'skilltree'

            mods {
                skilltree {
                    source sourceSets.main
                }
            }
        }

        gameTestServer {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'forge.enabledGameTestNamespaces', 'skilltree'

            mods {
                skilltree {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'skilltree', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                skilltree {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	maven {
        url = "https://maven.theillusivec4.top/"
    }
	maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
	minecraft 'net.minecraftforge:forge:1.19.2-43.2.14'
    // mixin
	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.2.1"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.2.1")) {
        jarJar.ranged(it, "[0.2.1,)")
    }
    // curios
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.2-5.1.4.1")
    // appleskin
	implementation fg.deobf("curse.maven:appleskin-248787:3872808")
    // attirubutefix
	implementation fg.deobf("curse.maven:attributefix-280510:4436598")
    // dummy target
	implementation fg.deobf("curse.maven:mmmmmmmmmmmm-225738:4410143")
    implementation fg.deobf("curse.maven:selene-499980:4491267")
    // easy magic
	implementation fg.deobf("curse.maven:easy-magic-456239:4411042")
    implementation fg.deobf("curse.maven:puzzles-lib-495476:4499052")
    // easy villager
	implementation fg.deobf("curse.maven:easy-villagers-400514:4502586")
    // farmer's delight
	implementation fg.deobf("curse.maven:farmers-delight-398521:4525646")
    // apotheosis
	implementation fg.deobf("curse.maven:apotheosis-313970:4730358")
	implementation fg.deobf("curse.maven:placebo-283644:4677899")
    // max health fix
	implementation fg.deobf("curse.maven:max-health-fix-492246:3943055")
    // enchantment descriptions
	implementation fg.deobf("curse.maven:enchantment-descriptions-250419:4277356")
	implementation fg.deobf("curse.maven:bookshelf-228525:4556697")
    // jei
	implementation fg.deobf("curse.maven:jei-238222:4494410")
    // tetra
	implementation fg.deobf("curse.maven:tetra-289712:4487237")
	implementation fg.deobf("curse.maven:mutil-351914:3941314")
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "skilltree",
                "Specification-Vendor"    : "Daripher",
                "Specification-Version"   : project.jar.archiveVersion,
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "Daripher",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
